@@ -110,6 +110,8 @@ Extensions
 Other Changes
 =============
 
+* Add missing dunder methods to ``unexpected-special-method-signature`` check.
+
 * No longer emit ``no-member`` in for loops that reference ``self`` if the binary operation that
   started the for loop uses a ``self`` that is encapsulated in tuples or lists.
 
